B&L QA/objects/Customer_Feedback_Question__c.object
<CustomObject>
    <description>This object allows Customer Service to maintain the verbage to be displayed for the verint survey questions. CastIron will use this object to map the Record Type and Question # to the correct Description.</description>
    <fields>
        <fullName>Question_Description__c</fullName>
        <description>Verbage associated with the Question Number</description>
        <label>Question Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>Value fed for Question from the Verint system the CastIron will use to retrieve the the Question Description</description>
        <label>Question Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Record Type for the Verint Survey Questions</description>
        <label>Record Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRC Customer Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Feedback Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Customer Feedback Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>